Add deploy User Routes and Fix migrations and seed
